--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,36 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
+  scrollbar-width: thin;
 }
 
 @font-face{
   font-family: 'strengthen';
   src: url('fonts/Strengthen.ttf');
 }
-
 /* Components */
+
+#BackBTN{
+  margin: 20px;
+  width: 50px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-start;
+  cursor: pointer;
+  animation: playerCardAnimation 0.5s ease-in-out;
+  border: 2px solid #ffffff;
+  background-color: #252525;
+  border-radius: 5px;
+}
+
+#BackBTN svg{
+  margin-top: 3px;
+  height: 80%;
+  fill: #ffffff; 
+}
+
 
 /* Character Cards */
 .mini_player{
@@ -179,30 +201,51 @@ header svg.active{
   fill: #68afad;
 }
 
-.container{
-  display: flex;
+#background {
+  width: 110%;
+  height: 110%;
   justify-content: center;
+  align-items: center;
+  position: fixed;
+  background-image: url('img/other/bg.png');
+  filter: blur(5px);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  align-self: center;
+  z-index: -1;
+  animation: zoomAnimation 0.5s ease-in-out;
 }
 
-#background{
-  background-image: url('img/bg_pc.jpg');
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  filter: brightness(0.05);
-  position: fixed;
-  z-index: -1;
+@keyframes zoomAnimation {
+  0% {
+    transform: scale(.95);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 #background_svg{
-  width: 100%;
+  width: 110%;
   height: 110%;
   position: fixed;
   z-index: -1;
-  background-color: #FEFEFE;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(81,939,465)'%3E%3Cstop offset='0' stop-color='%23FEFEFE'/%3E%3Cstop offset='1' stop-color='%23FEFEFE'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='300' height='250' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.08'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(81,939,465)'%3E%3Cstop offset='0' stop-color='%23FEFEFE'/%3E%3Cstop offset='1' stop-color='%23FEFEFE'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='300' height='250' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.08'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-size: cover;
+  background-position: center;
+  animation: BuilderBG 1s ease-in-out;
+}
+
+@keyframes BuilderBG {
+  0% {
+    transform: scale(.95);
+    filter: brightness(0);
+  }
+  100% {
+    transform: scale(1);
+    filter: brightness(1);
+  }
 }
 
 /* Homepage */
@@ -233,6 +276,7 @@ background-size: cover;
   padding: 5px;
   color: #fefefe;
   font-size: 15px;
+  border: 1px solid #fefefe;
 }
 
 #searchbar button{
@@ -270,6 +314,7 @@ background-size: cover;
   align-items: center;
   margin-top: 20px;
   flex-wrap: wrap;
+  animation: playerCardAnimation 0.5s ease-in-out;
 }
 
 #players_list{
@@ -280,6 +325,18 @@ background-size: cover;
   margin-top: 20px;
   color: #fefefe;
   text-align: center;
+  animation: playerCardAnimation 0.75s ease-in-out;
+}
+
+@keyframes playerCardAnimation {
+  0% {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 /* */
 
@@ -302,6 +359,7 @@ background-size: cover;
   color: #fefefe;
   text-align: center;
   margin-top: 20px;
+  animation: playerCardAnimation 0.75s ease-in-out;
 }
 
 #GK{
@@ -388,10 +446,7 @@ background-size: cover;
 /* Moves */
 #moves_container{
   display: flex;
-  background-color: #08070f;
-  width: auto;
-  margin-left: 8%;
-  width: 100%;
+  width: 100vw;
   align-items: center;
   min-width: 750px;
   flex-direction: column;
@@ -429,6 +484,7 @@ background-size: cover;
   margin: 5px;
   border-radius: 5px;
   border: 1px solid #938AF1;
+  background-color: #1b1833;
   color: #fefefe;
   grid-template-rows: 30% 20% 20% 20% 10%;
   grid-template-columns: 5% 15% 20% 25% 35%;
@@ -495,7 +551,7 @@ background-size: cover;
 
 /* New Homepage */
 
-#home_container{
+.container{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -503,16 +559,33 @@ background-size: cover;
   height: 100vh;
 }
 
+.scroll_container{
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+}
+
 #home_bg{
   width: 105%;
   height: 105%;
   position: fixed;
   background-image: url('img/other/bg.png');
-  filter: blur(5px);
+  filter: blur(2px);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   z-index: -1;
+  animation: zoomoutAnimation 0.5s ease-in-out;
+}
+
+@keyframes zoomoutAnimation {
+  0% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 #home_main{
@@ -527,6 +600,7 @@ background-size: cover;
   width: 100%;
   height: 100%;
   display: flex;
+  text-decoration: none;
 }
 
 #home_main div{
@@ -548,7 +622,7 @@ background-size: cover;
 
 .home_class_text h1{
   font-size: 1.5vw;
-  margin-top: 1vw;
+  margin-top: 2vw;
 }
 
 #home_players{
@@ -559,9 +633,9 @@ background-size: cover;
   justify-content: end;
   align-items: center;
   background-image: url('img/other/nr1.png');
-  background-position: 55% 25vw;
+  background-position: 55%;
   background-size: cover;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 #home_players:hover{
@@ -576,9 +650,9 @@ background-size: cover;
   justify-content: end;
   align-items: center;
   background-image: url('img/other/TeamBuilder.jpg');
-  background-size: 43vw;
-  background-position: 44% 24vw;
-  transition: 0.5s;
+  background-size: 44vw;
+  background-position: 44% 24.5vw;
+  transition: 0.3s;
 }
 
 #home_builder:hover{
@@ -602,7 +676,7 @@ background-size: cover;
   background-image: url('img/other/FireTornado.jpg');
   background-position: 0% -4vw;
   background-size: cover;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 #home_moves:hover{
@@ -616,9 +690,9 @@ background-size: cover;
   justify-content: end;
   align-items: center;
   background-image: url('img/other/news.png');
-  background-position: 21vw 12vw;
+  background-position: 50%;
   background-size: cover;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 #home_news:hover{
